cluster/extras/local-dev/services/endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: local-dev-service #må ha samme navn som servicen
subsets:
  - addresses:
      - ip: 10.0.1.1
    ports:
      - port: 9000
