cluster/extras/local-dev/services/service.yml
apiVersion: v1
kind: Service
metadata:
  name: local-dev-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
